# Lectern

./: .env.example  .gitignore  .gitleaks.toml  .lectern_state.json  .pyre_configuration  =0.23.0  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Lectern.linux.spec  Lectern.macos.spec  Lectern.spec  Lectern.windows.spec  README.md  RELEASING.md  ai_batch.py  ai_cards.py  ai_client.py  ai_common.py  ai_generator.py  ai_legacy.py  ai_pacing.py  ai_prompts.py  ai_schemas.py  anki_connector.py  anki_reader.py  backendimprovement.md  build_app.sh  build_linux.sh  build_windows.ps1  checkpoint.py  config.py  cost_estimator.py  create_dmg.sh  debug_generate_endpoint.py  debug_test.py  debug_test2.py  (+32 more)
.Jules/: palette.md
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
audit/: README.md  ai_layer.md  anki_integration.md  config_parser.md  frontend.md  gui_backend.md  lectern_service.md  tasks_by_complexity.md
docs/: AI_PIPELINE.md  ARCHITECTURE.md  BACKEND.md  CI_CD.md  DESIGN_PHILOSOPHY.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  FRONTEND.md  history.md  system_overview.md
features/: 01_card_sorting.md  02_card_search.md  03_focus_prompt.md  04_density_slider_input.md  05_session_management.md  06_history_filter.md  07_card_deletion.md  README.md
gui/: launcher.py
lectern/: __init__.py  ai_client.py  ai_common.py  ai_pacing.py  ai_prompts.py  ai_schemas.py  anki_connector.py  card_quality.py  checkpoint.py  config.py  cost_estimator.py  coverage.py  domain_types.py  generation_loop.py  generation_utils.py  lectern_service.py  phase_handlers.py  snapshot.py  validation.py
logs/: generation-20251002-161747-362586.json  session-20251218-174203-492316.json  session-20251218-174624-912683.json  session-20251218-182114-328819.json  session-20251218-182121-563588.json
scripts/: build_app.sh  build_linux.sh  build_windows.ps1  create_dmg.sh  perf_report.py  release.sh
specs/: Lectern.linux.spec  Lectern.macos.spec  Lectern.windows.spec
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: benchmark_state_serialization.py  conftest.py  test_ai_client.py  test_ai_common.py  test_ai_naming.py  test_ai_pacing.py  test_ai_prompts.py  test_anki_connector.py  test_anki_connector_patterns.py  test_anki_updates.py  test_api.py  test_card_deletion.py  test_card_quality_evaluator.py  test_config.py  test_cost_estimator.py  test_coverage.py  test_escape_sequences.py  test_exam_mode.py  test_gemini_provider.py  test_generation_grounding_gate.py  test_generation_loop.py  test_generation_loop_decoupled.py  test_generation_phase.py  test_generation_service.py  test_history_manager.py  test_image_compression.py  test_integration.py  test_integration_io.py  test_keychain.py  (+26 more)
(+336 files in other folders)
