[package]
name = "lectern-desktop"
version = "2.3.0"
description = "Lectern — turn lecture PDFs into Anki flashcards"
authors = ["Steffen Grabert"]
edition = "2021"

[lib]
name = "lectern_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# unsafe-headers lets the webview supply its own Origin header. AnkiConnect
# 403s the default `tauri://localhost` origin; anki.ts sends `http://localhost`,
# which is in AnkiConnect's default webCorsOriginList.
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The updater is desktop-only; process provides the relaunch after install.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
